force-app/main/default/objects/Campaign/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <description>Initiative: Initiatives are the parents to parent campaigns and they are key for the business that is working on, aimed at providing PM level support and C suite reporting
Parent Campaign: the different programs ran against that initiative such as webinars, events, demand gen etc
Child Campaign: The tactical aspect, different email invitations etc</description>
    <inlineHelpText>Types of Campaigns:
- Initiative (aimed at providing PM level support &amp; C-suite reporting)
- Parent campaign (different programs ran against that initiative)
- Child campaign (for tactical aspects)</inlineHelpText>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiative</fullName>
            </value>
            <value>
                <fullName>Parent Campaign</fullName>
            </value>
            <value>
                <fullName>Child Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>