force-app/main/default/objects/Campaign/fields/Relevant_SDRs__c.field-meta.xml
<CustomField>
    <fullName>Relevant_SDRs__c</fullName>
    <label>Relevant SDRs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dan Hermann</fullName>
            </value>
            <value>
                <fullName>Holly Stirk</fullName>
            </value>
            <value>
                <fullName>Lori Hamel</fullName>
            </value>
            <value>
                <fullName>Mel Camu</fullName>
                <isActive>false</isActive>
                <label>Mel Camu</label>
            </value>
            <value>
                <fullName>Michael Johnston</fullName>
            </value>
            <value>
                <fullName>Nicola Smith</fullName>
            </value>
            <value>
                <fullName>Tim Parsons</fullName>
                <isActive>false</isActive>
                <label>Tim Parsons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>