force-app/main/default/objects/Campaign/fields/Segment_Focus__c.field-meta.xml
<CustomField>
    <fullName>Segment_Focus__c</fullName>
    <label>Segment Focus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA Legal North</fullName>
            </value>
            <value>
                <fullName>NA Legal South/APAC</fullName>
            </value>
            <value>
                <fullName>NA Legal North &amp; NA Legal South/APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Accounting/Consulting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>