force-app/main/default/objects/Campaign/fields/Target_Tier__c.field-meta.xml
<CustomField>
    <fullName>Target_Tier__c</fullName>
    <label>Target Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Tier A</fullName>
            </value>
            <value>
                <fullName>Tier B</fullName>
            </value>
            <value>
                <fullName>Tier C</fullName>
            </value>
            <value>
                <fullName>Tier D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>