force-app/main/default/objects/Campaign/fields/Value_of_Closed_Won_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Closed_Won_opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>sums the ‘Recurring Amount (Change)’ of the opportunities where ‘Simple Status’ = ‘Closed Won’</description>
    <inlineHelpText>sums the ‘Recurring Amount (Change)’ of the opportunities where ‘Simple Status’ = ‘Closed Won’</inlineHelpText>
    <label>Value of Closed Won opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>