force-app/main/default/objects/Campaign/fields/Value_of_Open_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Open_opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>sums the ‘Recurring Amount (Change)’ of the opportunities where ‘Simple Status’ = ‘Open’ and ‘Stage’ not equal to ‘Target Account’</description>
    <inlineHelpText>sums the ‘Recurring Amount (Change)’ of the opportunities where ‘Simple Status’ = ‘Open’ and ‘Stage’ not equal to ‘Target Account’</inlineHelpText>
    <label>Value of Open opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>