force-app/main/default/objects/Campaign/fields/Value_of_Target_Account_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Target_Account_opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>sum of the ‘Recurring Amount (Change)’ of the opportunities where ‘Stage’ = ‘Target Account’</description>
    <inlineHelpText>sum of the ‘Recurring Amount (Change)’ of the opportunities where ‘Stage’ = ‘Target Account’</inlineHelpText>
    <label>Value of Target Account opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>