force-app/main/default/objects/Campaign/recordTypes/Archived_Campaigns.recordType-meta.xml
<RecordType>
    <fullName>Archived_Campaigns</fullName>
    <active>true</active>
    <description>For Marketing Operations Use only</description>
    <label>Archived Campaigns</label>
</RecordType>