force-app/main/default/objects/Campaign/recordTypes/Master_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Record_Type</fullName>
    <active>true</active>
    <description>Use for all new Campaigns</description>
    <label>Master Record Type</label>
</RecordType>